Adding Mollusk page

--- a/style.css
+++ b/style.css
@@ -312,6 +312,10 @@ Background images
     background-image: url(img/ses.png);
 }
 
+.mollusk {
+    background-image: url(img/mollusk.png)
+}
+
 /*
 Background images
 */
