--- a/style.css
+++ b/style.css
@@ -313,7 +313,7 @@ Background images
 }
 
 .mollusk {
-    background-image: url(img/mollusk.png)
+    background-image: url(img/Mollusk.png)
 }
 
 /*
