changed p5js article ID

--- a/style.css
+++ b/style.css
@@ -312,7 +312,7 @@ Background images
     background-image: url(img/ses.png);
 }
 
-.mollusk {
+.p5js {
     background-image: url(img/Mollusk.PNG)
 }
 
