Fixed image pjs

--- a/style.css
+++ b/style.css
@@ -312,7 +312,7 @@ Background images
     background-image: url(img/ses.png);
 }
 
-.p5js {
+.pjs {
     background-image: url(img/Mollusk.PNG)
 }
 
