--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@ html, * {
 }
 
 body {
+		overflow-y: hidden;
+	overflow-x: hidden;
 	background-color: rgb(114, 114, 114);
 	color: white;
 	display: flex;
@@ -107,7 +109,9 @@ article p {
 }
 
 #home {
-	height: 100vh;
+	
+	height: 100%;
+	width: 100%;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -126,6 +130,7 @@ article p {
 	padding: 0em 15vw ;
 }
 #SongSelect {
+	left: 0px;
 	display: flex;
 	justify-content: space-evenly;
 	position: absolute;
