--- a/style.css
+++ b/style.css
@@ -67,6 +67,7 @@ p {
 }
 article {
 	padding: 1em;
+	padding-top: 0%;
 	
 }
 
@@ -146,15 +147,17 @@ article p {
 	display: flex;
 	justify-content: center;
 	position: absolute;
-	width: 100%;
+	width: 80%;
 	height: auto;
+	padding: 10%;
 	flex-wrap: wrap;
 }
 
 #lower {
-	height: 33.3vh;
+	height: 66.6vh;
 	display: flex;
 	align-items: center;
+	justify-content: center;
 }
 
 .foreground {
@@ -386,14 +389,14 @@ article p {
 	border: solid 3px rgb(114, 114, 114, 0);
 } 
 .songCard {
-	margin:  1em 0.5%;
+	margin:  2em 0.75%;
 	filter: drop-shadow(0px 4px 8px rgb(0 0 0 / 0.5));
 	background-color: white;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	border-radius: 50px;
-	width: 18%;
+	width: 20%;
 }
 
 .songCard:hover {
